--- a/wrapper.html
+++ b/wrapper.html
@@ -482,6 +482,7 @@
 	<script>
 		startTime = new Date()
 	</script>
+	<script src="https://350map.org/main.js"></script>
 	{% endif %}
 	{% endif %}
 	{% endif %}
