--- a/event_roster.html
+++ b/event_roster.html
@@ -13,7 +13,7 @@ tr:nth-child(2n - 1){
   background:rgba(21,36,42,0.1);}
 </style>
 
-{% ifequal signups.role 'attendee' %}
+{% ifequal signups.role 'host' %}
   <div class="text-large2 text-strong" style="margin-top: 0.8em;">{% filter ak_text:"event_roster_attendees_total"%}Total attendees:{% endfilter %}
     {{ signups|length|add:event.custom_fields.external_signups }}
   </div>
