--- a/event_roster.html
+++ b/event_roster.html
@@ -13,15 +13,17 @@ tr:nth-child(2n - 1){
   background:rgba(21,36,42,0.1);}
 </style>
 
-{% ifequal signups.role 'host' %}
+{% ifequal signups.role 'attendee' %}
   <div class="text-large2 text-strong" style="margin-top: 0.8em;">{% filter ak_text:"event_roster_attendees_total"%}Total attendees:{% endfilter %}
     {{ signups|length|add:event.custom_fields.external_signups }}
   </div>
   <form id="add-external-attendees" class="ak-form ak-errs-below" name="add-external-attendees" style="display: flex; align-items: center; "
     method="POST" action="/update_action/" accept-charset="utf-8">
     <div class="input-text ak-input-type-event">
-      <label for="id_action_external_signups">How many confirmed attendees do you have from other sources, eg. a Facebook event?</lab>
-      <input type="text" name="action_external_signups" id="id_action_external_signups" style="width: 100px; margin: 0 0.8em;"
+      <label class="hasTooltip"
+        data-tooltip="We will add this number to the total number of attendees shown on the signup page."
+        data-hasqtip="1" aria-describedby="qtip-1"for="id_action_external_signups">How many confirmed attendees do you have from other sources, eg. a Facebook event?</lab>
+      <input type="number" name="action_external_signups" id="id_action_external_signups" style="width: 100px; margin: 0 0.8em;"
         value="{{ event.custom_fields.external_signups }}">
     </div>
     <button type="submit"
