--- a/event_attendee_tools.html
+++ b/event_attendee_tools.html
@@ -94,7 +94,7 @@
 			{% endif %}
 			</div>
 
-			
+
 		<div id="event-attend-map" style="max-width:750px;height:460px" data-src-latlong={{event.latitude}},{{event.longitude}}></div>
 		<div class="text-center text-small event-attend-directions-link event-directions-link">
 			<a class="text-blue text-underline-none opacity-50" href="https://maps.google.com/maps?daddr={{ event.address1|urlencode }}, {{ event.city_etc|urlencode }}" target="_blank">{% filter ak_text:"event_attend_directions_label" %}Get directions to this event.{% endfilter %}</a>
@@ -133,7 +133,13 @@
 			</div>
 			{% endif %}
 			<p class="text-large2 text-strong" style="padding-top: 0.8em;">
-				{% filter ak_text:"event_roster_attendee_status_start"%}So far,{% endfilter %} {{ event.attendee_count }} {% filter ak_text:"event_roster_attendee_status_end"%}people are joining this event.{% endfilter %}
+				{% filter ak_text:"event_roster_attendee_status_start"%}So far,{% endfilter %}
+				{% if event.custom_fields.external_signups %}
+          {{ event.attendee_count|add:event.custom_fields.external_signups }}
+        {% else %}
+          {{ event.attendee_count }}
+				{% endif %}
+				{% filter ak_text:"event_roster_attendee_status_end"%}people are joining this event.{% endfilter %}
 			</p>
 			<div class="event-attend-tools-link-update">
 				<a href="../signup/?akid={{ args.akid }}&amp;action_id={{ action.id }}&update=1#event-attend-rsvp">{% filter ak_text:"event_attend_update_info"%}Update your information{% endfilter %}</a>
