--- a/event_search.html
+++ b/event_search.html
@@ -86,6 +86,20 @@ a.area-link.event-link:hover {
   .is-sticky #event-map{
     width:40% !important;}
 
+  #map-embed-350org .event-list-item-cta a.event-list-item-cta-btn {
+    background-color: rgb(15,129,233) !important;
+    border-color: inherit;
+    border-width: 2px;
+    border-style: solid;
+    color: inherit;
+    text-decoration: none;
+    margin-top: 5px;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
 }
 </style>
 <div id="page-header" class="section width-normal padding-large text-center bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
@@ -106,110 +120,18 @@ a.area-link.event-link:hover {
 
   </div>
 </div>
-
-<div class="section bg-white notch width-full padding-none">
-<div id='map-embed-350org' 
-class="padding-medium" 
-data-src-latlong={% if page.custom_fields.event_search_map_center %}{{ page.custom_fields.event_search_map_center }}{% else %}13.076647312917522, 28.828125{% endif %}} style='height: 80vh' data-src-layers="events" data-src-zoom=3></div>
+{% if page.custom_fields.form_text_above_form %}
+  {{ page.custom_fields.form_text_above_form }}
+{% else %}
+      <h3 class="meta margin-bottom-normal opacity-50">{% filter ak_text:"event_search_form_instructions" %}Find an event near you{% endfilter %}</h3>
+{% endif %}
+<div id='map-embed-350org' data-src-zoom=6 class="section bg-white notch width-full padding-none" style='height: 70vh' data-src-latlong="{% if page.custom_fields.event_search_map_center %}{{ page.custom_fields.event_search_map_center }}{% else %}1.2921, 36.8219{% endif %}">
+<script src="https://350map.org/main.js"></script>
 </div>
 {% include "./social_plugins.html" %}
 {% endblock %}
 
 {% block tail_js %}
-<script type="text/javascript">
-      RAH = {};
-      RAH.sprite_url = "https://350-ak-map-assets.netlify.com/images/marker-single.png";
-      RAH.multiple_sprite_url = "https://350-ak-map-assets.netlify.com/images/marker-cluster.png";
-      // Add locations for plotting on the map
-      RAH.event_locations = [];
-      RAH.map_center = {};
-</script>
 <script type="text/javascript" src="https://s3.amazonaws.com/s3.350.org/js/map/markerclusterer.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
-<script type="text/javascript">
-
-</script>
-<script type="text/javascript">
-/**
-window.mapEvents = [
-{% for event in campaign.event_set.all.select_related %}
-{% if not event.is_private %}{% if event.host_is_confirmed and event.status == "active" %}{% if event.is_approved or not campaign.require_staff_approval %}
-{
-"event_id": "{{ event.id }}", "created_at": "{{ event.created_at }}", "updated_at": "{{ event.updated_at }}", "address1": "{{ event.address1 }}", "address2": "{{ event.address2 }}", "city": "{{ event.city }}", "state": "{{ event.state }}", "region": "{{ event.region }}", "postal": "{{ event.postal }}", "zip": "{{ event.zip }}", "plus4": "{{ event.plus4 }}",
-"country": "{{ event.country }}", "longitude": {% if event.custom_fields.geocoded_longitude %}{{ event.custom_fields.geocoded_longitude }} {% else %}{{ event.longitude }}{% endif %}, "latitude": {% if event.custom_fields.geocoded_latitude %}{{ event.custom_fields.geocoded_latitude }} {% else %}{{ event.latitude }}{% endif %}, "campaign_id": "{{ event.campaign_id }}", "title": "{{ event.title }}", "creator_id": "{{ event.creator_id }}", "starts_at": "{{ event.starts_at|date:'c' }}", "ends_at": "{{ event.ends_at|date:'c' }}", "status": "{{ event.status }}", "host_is_confirmed": "{{ event.host_is_confirmed }}", "is_private": "{{ event.is_private }}", "is_approved": "{{ event.is_approved }}", 
-"attendee_count": "{{ event.attendee_count }}", "max_attendees": "{{ event.max_attendees }}", "venue": "{{ event.venue }}", 
-"public_description": "{{ event.public_description|linebreaksbr|escapejs }}",
-"directions": "{{ event.directions|linebreaksbr|escapejs }}",
-"note_to_attendees": "{{ event.note_to_attendees|linebreaksbr|escapejs }}",
-{% if event.custom_fields.event_facebook_id and event.custom_fields.event_facebook_id != "none" %}"facebook_id": "{{ event.custom_fields.event_facebook_id }}",{% endif %}
-"notes": "{{ event.notes|linebreaksbr|escapejs }}"
-},
-{% endif %}{% endif %}{% endif %}
-{% endfor %}
-0
-];
-window.mapEvents = window.mapEvents.slice(0, -1);
-
-function initData(geocoded_events, offsite_events) {
-  if( offsite_events.length ) {
-    window.mapEvents.push.apply(window.mapEvents, offsite_events);
-  }
-
-  for( var i=0; i<window.mapEvents.length; ++i ) {
-    var event_id = window.mapEvents[i].event_id;
-    if( geocoded_events[event_id] ) {
-      window.mapEvents[i].latitude = geocoded_events[event_id].latitude;
-      window.mapEvents[i].longitude = geocoded_events[event_id].longitude;
-    }
-  }
-  loadMap(window.mapEvents);
-console.log('initData called.');
-};
-
-var $sel = function(selector) {
-    if ( actionkit.multiForms && actionkit.form )
-        return $(actionkit.form).find(selector);
-    return $(selector);
-};
-
-var featured_events = [], featured_events_ready = false, featured_events_highlighted = false;
-
-function fitMapToEvents(el) {
-  var events = el.find("li[data-event_id]");
-  if( !events || !events.length ) {
-    gmap.setZoom(myOptions.zoom);
-    gmap.setCenter(myOptions.center);
-    return;
-  }
-  var fitBounds = new google.maps.LatLngBounds();
-  for( var i=events.length-1; i>=0; --i ) {
-    var event = events[i];
-    var arrayPosition = $.inArray($(event).data("event_id"), $.map(mapEvents, function(el){ return parseInt(el.event_id); }));
-    if( arrayPosition != -1 ) {
-      var entry = mapEvents[arrayPosition];
-      fitBounds.extend(new google.maps.LatLng(entry.latitude, entry.longitude));
-    }
-  }
-  gmap.fitBounds(fitBounds);
-  if( gmap.getZoom() > 17 ) { gmap.setZoom(17); }
-}
-
-actionkit.forms.onEventSearchResults = function(html) {
-  try {
-    var el = $("<div>").html(html);
-    if( featured_events_ready ) {
-      highlightFeaturedEvents(el);
-    }
-    fitMapToEvents(el);
-    html = el.html();
-  } finally {
-    $sel('#event-search-results, .event-search-results').html(html);
-  }
-};
-$(window).load(function() {
-	initData([], []);
-});
-**/
-</script>
-
 {% endblock %}
