Update changes to monitor templateset configs on AK

--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -1,4 +1,3 @@
-{% extends "./wrapper.html" %}
 {% comment %}
 Custom template for same-page post-AJAX submit share ask.
 {% endcomment %}
@@ -171,6 +170,7 @@ Custom template for same-page post-AJAX submit share ask.
 
 <script>
 jQuery(document).ready(function($){
+	console.log("we actually got here");
 	/* only run the AJAX submission if we're sure this is an AK-hosted page */
 	if ( $('html').hasClass('ak-hosted') ){
 		let initDonateAmounts = [];
