--- a/donate.html
+++ b/donate.html
@@ -846,6 +846,7 @@
 
     // Change donation type value if custom field is set to both-recurring
     $('#id_donation_type_toggle').click(function () {
+      console.log('toggle clicked')
         if ($(this).prop('checked')) {
           $('#donation_type').val("single")
           console.log('One-time donation option set')
