fix: add console message to test click, attempt #2

--- a/donate.html
+++ b/donate.html
@@ -845,6 +845,7 @@
     } );
 
     // Change donation type value if custom field is set to both-recurring
+    console.log('hello there, this is a test');
     $('#id_donation_type_toggle').click(function () {
       console.log('toggle clicked')
         if ($(this).prop('checked')) {
