--- a/event_create.html
+++ b/event_create.html
@@ -87,6 +87,21 @@
 
 }
 
+.zoom-webinar-btn {
+  background: #4285f4;
+  color: white;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: .25px;
+  line-height: 36px;
+  text-decoration: none;
+  text-transform: none;
+  border: none;
+}
+
+.zoom-webinar-btn:focus{
+  outline: none;
+}
 </style>
 
 <div id="event-create-header" class="page-header section width-normal padding-large text-center bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
@@ -126,7 +141,6 @@
           {% include "./date_picker.html" %}
       	</div>
         <script>
-
           // Replace animation w/instant show, because anim breaks
           // tabbing quickly past the date field.
           jQuery.fn.showFast = function(speed, callback) {
@@ -134,14 +148,14 @@
             callback()
           }
           jQuery(document).ready(function($){
-            $("#id_event_starts_at_date").datepicker({minDate: 0, showAnim: 'showFast' });
+            // $("#id_event_starts_at_date").datepicker({minDate: 0, showAnim: 'showFast' });
           });
 
   {% if page.custom_fields.event_use_24hour_time %}
         	$(window).load(function() {
             var time = $(":input[name=event_starts_at_time]").val();
             var ampm = $(":input[name=event_starts_at_ampm]").val();
-            $(":input[name=event_starts_at_time]").hide();
+            $(":input[name=event_starts_at_time]t").hide();
             $("div.input.ampm").hide();
             var hour = time.split(":")[0], min = time.split(":")[1];
             hour = parseInt(hour);
@@ -186,12 +200,6 @@
           </div>
         </div>
 {% endif %}
-        <!-- {% include "snippets/wrapper.html" with snippet="event_create_facebook_id_field" %} -->
-
-        <!--<div class="input-text ak-input-type-event id_event_max_attendees">
-      		<label for="id_event_max_attendees">{% filter ak_text:"event_create_field_label_max_attendees" %}Maximum Number of Attendees {% endfilter %}</label>
-      		<input id="id_event_max_attendees" type="text" name="event_max_attendees" value="{{ campaign.default_event_size|default:"" }}" size="8" />
-      	</div>-->
 
         {% include_tmpl form.custom_field_html %}
         <div class="input-textarea ak-input-type-event id_event_public_description margin-bottom-none">
@@ -218,58 +226,14 @@
     </div>
   </div>
 
-  <div id="event-create-event-location" class="section bg-white form-style-expanded width-normal padding-medium">
-    <div class="section-inner">
-
-      <fieldset id="event-location">
-      	<h3 class="section-header meta margin-bottom-large">{% filter ak_text:"event_create_section_location" %}Event Location{% endfilter %}</h3>
-{% with "event_" as input_name_prefix %}
-  {% if campaign.show_address1 %}
-        <p class="opacity-50 text-strong">{% filter ak_text:"event_create_address_privacy_note" %}NOTE: Unless you're hosting a private event, event addresses will be listed publicly.{% endfilter %}</p>
-  {% else %}
-        <p class="text-small opacity-50">{% filter ak_text:"event_create_address_hidden_privacy_note" %}NOTE: The exact address will be hidden until people sign up to attend your event.{% endfilter %}</p>
-  {% endif %}
-        <div class="input-text ak-input-type-event input-venue">
-      		<label for="id_event_venue">{% filter ak_text:"event_create_label_venue" %}Venue (i.e. "My Living Room" or "North Side Park"){% endfilter %}</label>
-          <input id="id_event_venue" type="text" if-at-my-house="Home" name="event_venue" />
-      	</div>
-  {% if not campaign.show_address1 %}
-        <p class="text-small opacity-50">{% filter ak_text:"event_create_location_hidden_bigcity_note" %}If your event is in a large city, you might want to include the neighborhood or district in the venue name.{% endfilter %}</p>
-  {% endif %}
-        <div class="input-select ak-input-type-event input-country">
-      		<label for="event_country">{% filter ak_text:"field_country" %}Country{% endfilter %}</label>
-      		{% include "./country_select.html" %}
-      	</div>
-        <div class="input-text ak-input-type-event input-address">
-      		<label for="id_event_address1">{% filter ak_text:"field_address1"|capfirst %}Street address{% endfilter %}</label>
-      		<input id="id_event_address1" type="text" name="event_address1" />
-      	</div>
-
-        <div class="input-text ak-input-type-event input-city">
-      		<label for="id_event_city">{% filter ak_text:"field_city" %}City{% endfilter %}</label>
-      		<input id="id_event_city" type="text" name="event_city" />
-      	</div>
-        <div class="input-text ak-input-type-event input-postal">
-      		<label for="id_event_postal">{% filter ak_text:"field_postal" %}Postal{% endfilter %} {% filter ak_text:"general_optional" %}(Optional){% endfilter %}</label>
-      		<input id="id_event_postal" type="text" name="event_postal" />
-      	</div>
-        <div class="input-text ak-input-type-event input-zip">
-      		<label for="id_event_zip">{% filter ak_text:"field_postal" %}Postal/ZIP{% endfilter %}</label>
-      		<input id="id_event_zip" type="text" name="event_zip" />
-      	</div>
-		{% if page.custom_fields.hide_state_field %}{% else %}
-      <div class="input-select ak-input-type-event input-state">
-      		<label for="id_event_state">{% filter ak_text:"field_state" %}State{% endfilter %}</label>
-      		{% include "./state_select.html" %}
-      	</div>
-		{% endif %}
-
-{% endwith %}
-      </fieldset>
-    </div>
-  </div>
-
-
+  <!--Event create fields-->
+  {% if page.custom_fields.is_webinar %}
+   {% include "./zoom_webinar.html" with event=campaign %}
+  {%else %}
+  {{page}}
+   {% include "./event_create_field_set.html" %}
+  {% endif%}
+  <!--Event create fields end-->
   <div id="event-create-host-info" class="section bg-ltgray form-style-expanded width-normal padding-medium">
     <div class="section-inner">
       <h3 class="section-header meta margin-bottom-large">{% filter ak_text:"event_create_section_contact" %}Your contact information{% endfilter %}</h3>
@@ -376,7 +340,7 @@
 {% endblock %}
 
 {% block script_additions %}
-{% include "includes/jquery_ui.html" %}
+{% comment %} {% include "includes/jquery_ui.html" %} {% endcomment %}
 
 <script>
 
@@ -515,7 +479,7 @@ $( function () {
             break;
         }
     }
-} );
+});
 </script>
 
 {% endblock %}
