--- a/wrapper.html
+++ b/wrapper.html
@@ -513,7 +513,7 @@
 			parentIFrame.sendMessage(window.location.href, "*");
 		}
 	</script>
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.8.26/dayjs.min.js"></script>
 	<div id="body-mobile-background"></div>
 </body>
 
