--- a/wrapper.html
+++ b/wrapper.html
@@ -515,6 +515,9 @@
 	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.8.26/dayjs.min.js"></script>
 	<div id="body-mobile-background"></div>
+	{% block scripts %}
+	<!-- scripts to all be moved here. -->
+	{% endblock %}
 </body>
 
 </html><!-- one more test for cache awesomeness -->
