Add in Zoom Webinar prefill for venue

--- a/zoom_webinar_create.html
+++ b/zoom_webinar_create.html
@@ -74,6 +74,7 @@
                     response.json().then(data=>{ 
                         // add the url to the address
                         $("#id_event_address1").val(`Link: ${data.data.join_url} , Password: ${data.data.password || ""}`);
+                        $("#id_event_venue").val("Via Zoom Webinar");
                         zoomSuccess.append(`<div class="webinar-details">
                         <p>Follow <a href=${data.data.join_url}>this</a> link to go to the webinar.</p>
                         `
